org.mmisw.ontmd: Ontology Metadata Manager and Voc2RDF
Carlos Rueda  -  http://marinemetadata.org

ChangeLog

2009-04-14
	Issue #124: Keep colons in values
		- Now colons are ONLY kept (not replaced with underscores) for the *term IDs* in voc2rdf;
		  so the name for a term (first column), eg., "abc:def:myterm" will result in
		  a term URI like the following http://mmisw.org/ont/someAuth/someVocab/abc:def:myterm
		- See Converter.createIndividual()
		- NOTE: Colons in the name of the class and in the column headers (which are converted to
		  datatype properties in the ontology) are still converted to underscores.
		   
	
2009-04-11, 13  (1.2.0.beta3)
	Issue #116: editing interface in the table is not functional
		- various changes including textbox in each field and navigation with keyboard
		- enter key enables cell for editing; enter typed again returns to navigation
		- first column and first row are made visible if the current focused cell is close
		  enough.
	Note: Some other improvements are of course possible; but any more sophisticated 
	      spreadsheet-like interface would require some significant effort. 
	      
	Fixed issue #115: "Allow tab delimiter when importing data in voc2rdf"
		Now, two buttons are included, both with options to select the desired separator: 
			- "Import" allows to enter terms from a CSV formatted text: the user specifies what
			  character should be interpreted as the field separator
			- "Export" displays the current table in CSV format (for the user to copy-n-paste somewhere);
			  the user indicates the desired separator character.
		- the following separators are possible: comma (,), sem-colon (;), tab, and pipe (|)
		
	Fixed #118: "Difficult to fix errors reported by voc2rdf"
		 Yes, this is difficult in the popup itself.
		 Fix: just let the table be updated; then the user can continue editing; the system
		 will make the error checking when attempting the "Convert to RDF action", anyway.
	
		
2009-04-07